--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,21 +8,25 @@
   <meta name="author" content="">
   <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
 
-  <title>Signin Template for Bootstrap</title>
+  <title>Link Shortener</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-  <link href="signin.css" rel="stylesheet">
+  <link href="index.css" rel="stylesheet">
 </head>
 
 <body class="text-center">
-  <form class="form-signin">
-    <input type="text" id="inputEmail" class="form-control" placeholder="Shorten your link" required autofocus>
+  <form class="form-shortener">
+    <input type="text" id="input-url" class="form-control" placeholder="Shorten your link" required autofocus>
+    <p id="fail-p" class="text-danger"></p>
     <div class="checkbox mb-3">
     </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Shorten</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit" id="shorten-button">Shorten</button>
   </form>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+<script src="index.js"></script>
 </body>
 
 </html>
