--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,7 +18,7 @@
 
 <body class="text-center">
   <form class="form-shortener">
-    <input type="text" id="input-url" class="form-control" placeholder="Shorten your link" required autofocus>
+    <input type="text" id="url" class="form-control" placeholder="Shorten your link" required autofocus>
     <p id="fail-p" class="text-danger"></p>
     <div class="checkbox mb-3">
     </div>
